public/stylesheets/styles.css
.choices-row {
  margin-top: -20%;
  height: 55vh;
}

.left-choice-one {
  background-color: green;
}

.left-choice-two {
  background-color: white;
}

.right-choice-one {
  background-color: orange;
}

.right-choice-two {
  background-color: yellow;
}

.slideshow {
  transition: background-image 1s ease-in-out;
  -webkit-backface-visibility: hidden;
  -webkit-perspective: 1000;
  background-repeat: no-repeat; 
  background-image: url(/images/rockefeller2.gif); 
  background-size: cover;
}

.questions {
  top: 80%; 
  margin: 0px; 
  height: 20vh; 
  width: 100%; 
  background-color: rgba(0, 0, 0, 0.6);
  color: white;
  text-align: center;
  position: fixed;
}

.first-slide {
  background-color: orange;
}

.second-slide {
  background-color: #B378D3;
}

.full-height {
  height: 100%;
}

.four-fifths-height {
  height: 80%;
}

.choice-title {
  height: 20%;
  background-color: gray;
  text-align: center;
}

#logo {
  font-family: Helvetica;
  text-align: center;
  color: #D1029D;
  height: 57%
}

#logo h1 {
  font-size: 3em;
  font-weight: 900;
  margin-bottom: -15px;
}

#logo span {
  font-size: 0px;
}

#logo h3 {
  color: white;
  padding-bottom: 1em;
}

#logo-background {
  background-color: rgba(0, 0, 0, 0.6);
  border-radius: 10px;
}

#empty-div {
  height: 10%;
}

.form-div {
  margin-left: 0%; 
  width: 100%; 
  height: 33%; 
  background-color: rgba(0, 0, 0, 0.6);
  color: white;
}

#form-div-1, 
#form-div-2,
#form-div-3, 
#form-div-4 {
  height: 100%; 
  text-align: center;
}
  
.question {
  margin-top: 2%;
}

#form-div-1 p{
  margin-top: 10%;
}

#form-div-2 p {
  margin-left: -5%;
  margin-top: 6%;
}

#form-div-2 input {
  margin-left: 5%;
}

#form-div-3 p {
  margin-top: 9%;
  margin-left: -5%;
}

#form-div-3 select {
  margin-left: 5%;
}

.question {
  font-size: 1.25em;
}

#start-date,
#end-date {
  color: black;
}

#submit {
  background-color: #D1029D;
  padding: 15px;
  border-radius: 5px;
  font-family: Helvetica;
  font-size: 18px;
  margin-top: 12%;
}

#choices-template {
  background-color: yellow;
}

#money-choice {
  background-color: orange;
}

#weekly-choice {
  background-color: blue;
}

#monthly-choice {
  background-color: green;
}

#hybrid-choice {
  background-color: red;
}

#weekday-rides, #weekend-rides {
  color: black;
}

